# node-addon

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg-settings.cmake  vcpkg-tool.CMakePresets.json  vcpkg.json
ports/activemq-cpp/: portfile.cmake
ports/asio-grpc/: portfile.cmake
ports/aws-sdk-cpp/: portfile.cmake
ports/boost-build/: portfile.cmake
ports/chakracore/: portfile.cmake
ports/cminpack/: portfile.cmake
ports/concurrencpp/: portfile.cmake
ports/cpp-httplib/: portfile.cmake
ports/cppslippi/: portfile.cmake
ports/daxa/: portfile.cmake
ports/directxmesh/: portfile.cmake
ports/dv-processing/: portfile.cmake
ports/ecos/: portfile.cmake
ports/faiss/: portfile.cmake
ports/fast-float/: portfile.cmake
ports/fastgltf/: portfile.cmake
ports/fastrtps/: portfile.cmake
ports/fftw3/: portfile.cmake
ports/fizz/: portfile.cmake
ports/flecs/: portfile.cmake
ports/foonathan-memory/: portfile.cmake
ports/highs/: portfile.cmake
ports/idyntree/: portfile.cmake
ports/intel-mkl/: portfile.cmake  vcpkg-cmake-wrapper.cmake
ports/jbig2dec/: portfile.cmake
ports/joltphysics/: portfile.cmake
ports/jsonifier/: portfile.cmake
ports/libavif/: portfile.cmake
ports/libdatachannel/: portfile.cmake
ports/libgwenhywfar/: portfile.cmake
ports/libosmscout/: portfile.cmake
ports/libphonenumber/: portfile.cmake
ports/librdkafka/: portfile.cmake
ports/libressl/: portfile.cmake
ports/librsvg/: portfile.cmake
ports/log4cxx/: portfile.cmake
ports/microsoft-signalr/: portfile.cmake
ports/mpc/: portfile.cmake
ports/nanopb/: portfile.cmake
ports/nettle/: portfile.cmake
ports/ngspice/: portfile.cmake
ports/node-addon/: portfile.cmake  vcpkg.json
ports/node-api-headers/: portfile.cmake
ports/nowide/: portfile.cmake
ports/omniorb/: portfile.cmake
ports/onnxruntime-gpu/: portfile.cmake
ports/polyhook2/: portfile.cmake
ports/protobuf-c/: portfile.cmake
ports/proxygen/: portfile.cmake
ports/quantlib/: portfile.cmake
ports/quill/: portfile.cmake
ports/restinio/: portfile.cmake
ports/sentry-native/: portfile.cmake
ports/simd/: portfile.cmake
ports/simdjson/: portfile.cmake
ports/spout2/: portfile.cmake  usage
ports/sqlcipher/: portfile.cmake
ports/stackwalker/: portfile.cmake
ports/starlink-ast/: portfile.cmake
ports/wangle/: portfile.cmake
ports/wil/: portfile.cmake
ports/yomm2/: portfile.cmake
ports/zeroc-ice/: portfile.cmake
projects/application/: CMakeLists.txt
projects/node-addon/: .editorconfig  package.json
scripts/azure-pipelines/: azure-pipelines.yml
scripts/boost/: generate-ports.ps1
support/environment/: env.os
versions/: baseline.json
(+58 files in other folders)
